--- a/demo/styles.css
+++ b/demo/styles.css
@@ -5,6 +5,7 @@
   --border-radius: 0.25rem;
   /* --border-color: rgba(0, 0, 0, 0.25); */
   --border-color: #bfbfbf;
+  --border: var(--border-width) solid var(--border-color);
   --box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.125);
   --text-color: #000;
   --background-color: #fff;
@@ -28,9 +29,31 @@ html {
   line-height: 1.5rem;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 button, input, textarea, select {
   font: inherit;
   box-sizing: border-box;
+}
+
+button {
+  display: inline-flex;
+  padding: 0 0.5rem;
+  height: var(--line-height);
+  color: var(--border-color);
+  font-weight: bold;
+  line-height: calc(var(--line-height) - var(--border-width) * 2);
+  letter-spacing: 0.0625rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: var(--border);
+  border-radius: var(--border-radius);
+}
+
+button:hover {
+  background: rgba(0,0,0,.05);
 }
 
 *:focus {
