--- a/demo/styles.css
+++ b/demo/styles.css
@@ -20,6 +20,8 @@
   --focus-width: 0.25rem;
   --focus-distance: 0.0625rem;
   --focus-shadow: 0 0 0 var(--focus-distance) var(--background-color), 0 0 0 var(--focus-width) var(--focus-color);
+  --icon-color: currentColor;
+  --icon-vertical-align: -0.1875em;
 }
 
 html {
@@ -27,10 +29,6 @@ html {
   padding: 0;
   font-size: 16px;
   line-height: 1.5rem;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 button, input, textarea, select {
